objects/nFORCE__Transaction__c.object
<CustomObject>
    <fields>
        <fullName>nFORCE__Attribute_1__c</fullName>
        <description>Billable attribute not captured in another field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Attribute_2__c</fullName>
        <description>Billable attribute not captured in another field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Attribute_3__c</fullName>
        <description>Billable attribute not captured in another field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute_3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Category__c</fullName>
        <description>The field is optional. The primary category used for sorting transactions.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Description__c</fullName>
        <description>It contains the Human-readable title</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Reference_Id__c</fullName>
        <description>The field contains the ID of the context object associated with the transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Result_Code__c</fullName>
        <description>The field contains the result code of the transaction. This typically contains a code that provides more detail about the result of the transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Result Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Result_Message__c</fullName>
        <description>The field contains a readable message that conveys the result of the transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Result Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Result_Type__c</fullName>
        <description>The field contains the result type of the transaction. This typically indicates if the transaction succeeded or failed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Result Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Result__c</fullName>
        <description>The field contains the specific result of the transaction. The field typically contains more detail about the transaction result and what is conveyed by the Result Type field. For example it can indicate the reason for a failure in this field.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Subcategory__c</fullName>
        <description>The secondary category used for sorting transactions.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subcategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Subtype__c</fullName>
        <description>The field indicates the subtype of the transaction that was performed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Type__c</fullName>
        <description>The field indicates the type of services for differentiating billable services.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Transaction</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>